--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,13 @@ homepage = "https://github.com/dimfeld/js_sidecar"
 documentation = "https://docs.rs/js_sidecar"
 
 [dependencies]
+nix = { version = "0.29.0", features = ["signal"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.121"
+tempfile = "3.10.1"
 thiserror = "1.0.63"
-tokio = { version = "1.36.0", features = ["macros", "rt", "signal", "sync", "time"] }
+tokio = { version = "1.36.0", features = ["io-util", "fs", "net", "process", "rt", "sync"] }
 tracing = "0.1.40"
+
+[dev-dependencies]
+tokio = { version = "1.36.0", features = ["io-util", "macros", "net", "process", "rt", "sync", "test-util"] }
