--- a/src/worker/package.json
+++ b/src/worker/package.json
@@ -9,7 +9,9 @@
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
+    "lru-cache": "^11.0.0",
     "rollup": "^4.19.1",
+    "rollup-plugin-node-externals": "^7.1.2",
     "tslib": "^2.6.2",
     "typescript": "^5.5.4",
     "vite": "^5.3.5",
@@ -25,7 +27,5 @@
   },
   "type": "module",
   "types": "./dist/index.d.ts",
-  "dependencies": {
-    "lru-cache": "^11.0.0"
-  }
+  "dependencies": {}
 }
